crates/cairo-lang-parser/src/parser_test_data/diagnostics/semicolon
//! > Missing semicolon

//! > test_runner_name
get_diagnostics

//! > cairo_code
fn f() {
    let x = 123
    let y = 4   let z = 5
    let y = 6 // comment
    let w = 7 +
}

//! > expected_diagnostics
error[E0001]: Missing token TerminalSemicolon.
 --> dummy_file.cairo:2:16
    let x = 123
               ^

error[E0001]: Missing token TerminalSemicolon.
 --> dummy_file.cairo:3:14
    let y = 4   let z = 5
             ^

error[E0001]: Missing token TerminalSemicolon.
 --> dummy_file.cairo:3:26
    let y = 4   let z = 5
                         ^

error[E0001]: Missing token TerminalSemicolon.
 --> dummy_file.cairo:4:14
    let y = 6 // comment
             ^

error[E0001]: Missing tokens. Expected an expression.
 --> dummy_file.cairo:5:16
    let w = 7 +
               ^

error[E0001]: Missing token TerminalSemicolon.
 --> dummy_file.cairo:5:16
    let w = 7 +
               ^
